# Tesis

./: .flake8  .gitattributes  .gitignore  .pdm-python  .pre-commit-config.yaml  =  LICENSE  ML_environment.yml  README.md  Untitled.py  config.yml  environment.lock.yml  environment.yml  generate_docs.py  generate_website_configs.py  nconfig.yml  pyproject.toml  readme2.md  requirements.txt  setup_figure_links.py  simulation_data_processor.py  store.py  train_plot.py  trained_models.json
.github/workflows/: ci.yml  pylint.yml
Avances/: avance 1.pptx
ML/: config.py  config.yaml  data_exploration.py  db_handler.py  main.py  main_hypertuning.py  main_training.py  pbltest.py  see_results.py  training.md  training.py
ML/core/: finetuner.py  optimizer.py  repeater.py  trainer.py
ML/modules/: cross_validation.py  data.py  hdf5_dataset.py  logging.py  loss.py  models.py  plots.py  training.py  utils.py  visualization.py
ML/scripts/: run_hyperparameter_search.py  run_transfer_learning.py  run_trial_repeat.py  train_model.py
Vault/.obsidian/: workspace.json
archivos/: bordeI.i2s  channelMesh3x3.t3c  crossx.i2s  out.txt  rcrossx.i2s  steering_0.cas  steering_1.cas  steering_2.cas  steering_3.cas  steering_5.cas  steering_file.cas
archivos/archivos/: results_0.slf  steering_0.cas  steering_0.cas.pre.fzip  steering_1.cas  steering_10.cas  steering_11.cas  steering_12.cas  steering_13.cas  steering_14.cas  steering_15.cas  steering_16.cas  steering_17.cas  steering_18.cas  steering_19.cas  steering_2.cas  steering_20.cas  steering_21.cas  steering_22.cas  steering_23.cas  steering_24.cas  steering_25.cas  steering_26.cas  steering_27.cas  steering_28.cas  steering_29.cas  steering_3.cas  steering_30.cas  steering_31.cas  steering_32.cas  steering_33.cas  steering_34.cas  steering_35.cas  steering_36.cas  steering_37.cas  steering_38.cas  steering_39.cas  steering_4.cas  steering_40.cas  steering_41.cas  steering_42.cas  (+13 more)
archivos/boundary/: boundary3x3.bc2  boundary3x3.cli  boundary3x3riv.bc2  boundary3x3riv.cli  boundary_3x3_riv.bc2  boundary_3x3_riv.cli  boundary_3x3_tor.bc2  boundary_3x3_tor.cli
archivos/geometry/: geometry1x1.slf  geometry_0.slf  geometry_0.slfk  geometry_3x3_0.slf  mesh_3x3.slf
archivos/outline/: bordeD.i2s  channelMesh.t3c  channel_mesh.xyz  crossx.i2s  crossy.i2s  outline.i2s  thalweg.i2s
archivos/results/: results_0.slf  results_0.slf.REMOVED.git-id  results_0_old1.slf  results_0_old1.slf.REMOVED.git-id  results_0_old10.slf  results_0_old16.slf  results_0_old17.slf  results_0_old2.slf  results_0_old2.slf.REMOVED.git-id  results_0_old21.slf.REMOVED.git-id  results_0_old22.slf.REMOVED.git-id  results_0_old23.slf  results_0_old24.slf.REMOVED.git-id  results_0_old29.slf.REMOVED.git-id  results_0_old3.slf  results_0_old4.slf.REMOVED.git-id  results_0_old5.slf.REMOVED.git-id  results_0_old6.slf  results_0_old6.slf.REMOVED.git-id  results_0_old8.slf  results_0_old9.slf  (+6 more)
data/: test_data.hdf5
fno_channel_flow.egg-info/: PKG-INFO
modules/: file_processing.py  statistics.py
src/: nconfig.py  simulation_data_processor.py
telemac/: config.py  constants.py  constants.yml  exploring.py  input_generator-Copy1.py  input_generator.py  logger_config.py  outputs.7z  parameters.csv  parametros.csv  results_reading.py  run.py  run_configurations.py  run_telemac_simulations.py  steering_0.cas  steering_1.cas  steering_10.cas  steering_100.cas  steering_101.cas  steering_102.cas  steering_103.cas  steering_104.cas  steering_105.cas  steering_106.cas  steering_107.cas  steering_108.cas  steering_109.cas  steering_11.cas  steering_110.cas  steering_111.cas  steering_112.cas  steering_113.cas  steering_114.cas  steering_115.cas  steering_116.cas  steering_117.cas  steering_118.cas  steering_119.cas  steering_12.cas  steering_120.cas  (+600 more)
tests/: generate_test_data.py  test_config.yml
(+263 files in other folders)
