# pyproject.toml

[project]
name = "tesis_fno_surrogate"
version = "0.1.0"

[tool.setuptools.packages.find]
where = ["src"] # <-- Tells setuptools to find packages in src/

# ... (keep the [project.optional-dependencies] and [project.urls] sections if you have them) ...

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
# Now that everything is in src/, our first-party packages are unambiguous
known-first-party = ["ML", "telemac", "common", "modules", "website", "nconfig", "simulation_data_processor"]
